# TrDict.v1

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_08_1328-794678ef9327_.py
settings/: config.py
trainingnote/: database.py  main.py
trainingnote/base/: base.py
trainingnote/exercise/: dao.py  models.py  router.py  schemas.py
trainingnote/training/: dao.py  models.py  router.py  schemas.py
trainingnote/user/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
