[tool.poetry]
name = "trainingnote"
version = "0.1.0"
description = ""
authors = ["Gleb <shchebetko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "trainingnote.main:app --reload"
